--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,9 @@
 				"--nolazy"
 			],
 			"env": {
-				"NODE_ENV": "development"
+				"DEBUG": "boatcam:*",
+				"NODE_ENV": "development",
+				"PORT": "3001"
 			},
 			"externalConsole": false,
 			"sourceMaps": false,
